Added some information\credits

--- a/ReplayManipulatorOpenSource/ReplayManipulatorOpenSource.vcxproj
+++ b/ReplayManipulatorOpenSource/ReplayManipulatorOpenSource.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="Features\BallHide\BallHiderAndDecals.cpp" />
     <ClCompile Include="Features\CamPathsManager\CamPathsManager.cpp" />
     <ClCompile Include="Features\CarRotator\CarRotator.cpp" />
+    <ClCompile Include="Features\Credits\Credits.cpp" />
     <ClCompile Include="Features\CustomTextures\CustomTextures.cpp" />
     <ClCompile Include="Framework\EventDispatcher\BakkesModEventDispatcher.cpp" />
     <ClCompile Include="Framework\EventDispatcher\BmAdapter.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="Features\BallHide\BallHiderAndDecals.h" />
     <ClInclude Include="Features\CamPathsManager\CamPathsManager.h" />
     <ClInclude Include="Features\CarRotator\CarRotator.h" />
+    <ClInclude Include="Features\Credits\Credits.h" />
     <ClInclude Include="Features\CustomTextures\CustomTextures.h" />
     <ClInclude Include="Framework\EventDispatcher\BakkesModEventDispatcher.h" />
     <ClInclude Include="Framework\EventDispatcher\BmAdapter.h" />
