--- a/ReplayManipulatorOpenSource/ReplayManipulatorOpenSource.vcxproj.filters
+++ b/ReplayManipulatorOpenSource/ReplayManipulatorOpenSource.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="Framework\EventDispatcher\ScopedBMEventDispatcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Features\Credits\Credits.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imgui_rangeslider.h">
@@ -285,6 +288,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Framework\EventDispatcher\ScopedBMEventDispatcher.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Credits\Credits.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
