fix missing goal explosion in editor

--- a/ReplayManipulatorOpenSource/ReplayManipulatorOpenSource.vcxproj
+++ b/ReplayManipulatorOpenSource/ReplayManipulatorOpenSource.vcxproj
@@ -88,7 +88,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalIncludeDirectories>$(APPDATA)\bakkesmod\bakkesmod\bakkesmodsdk\include;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <Optimization>Disabled</Optimization>
+      <Optimization>MaxSpeed</Optimization>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
